--- a/public_html/templates/create-event.html
+++ b/public_html/templates/create-event.html
@@ -1,1 +1,17 @@
-<h1>Create Event</h1>
+	<div class="col-md-offset-3 col-md-6 col-xs-12">
+		<div class="social-event">
+			<form>
+				<ul class="list-inline" id="createPost">
+					<li class=active><a href='#'>Add Event</a></li>
+					<li class='active'><a href='#'>Add Photo</a></li>
+				</ul>
+				<textarea class="form-control" placeholder="What's your event about?"></textarea>
+				<ul class='list-inline post-actions'>
+					<li><a href="#"><span class="glyphicon glyphicon-camera"></span></a></li>
+					<li><a href="#" class='glyphicon glyphicon-user'></a></li>
+					<li><a href="#" class='glyphicon glyphicon-map-marker'></a></li>
+					<li class='pull-right'><a href="#" class='btn btn-dark btn-xs'>Post</a></li>
+				</ul>
+			</form>
+		</div>
+	</div>
