add to styles.css        https://app.asana.com/0/464075553520381/481628262249789

--- a/src/app.css
+++ b/src/app.css
@@ -29,5 +29,33 @@ body {
 }
 
 /****************
-*
+*Rate-person
 *****************/
+.rating-person {
+	background-image: url("./image/crowd.jpeg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+}
+
+/****************
+*Rate-event
+*****************/
+.rating-event {
+	background-image: url("./image/crowd.jpeg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+}
+
+/****************
+*generic for rate-person and rate-event
+*****************/
+h4 {
+	text-align: center;
+}
+.card {
+	background-color: transparent;
+}
