updated angular files to ensure complete build

--- a/src/app.css
+++ b/src/app.css
@@ -1,38 +1,38 @@
 /****************
 * Create Event
 *****************/
-body {
-	margin-top: 20px; background-color: #eeeeee
-}
-.social-event {
-.glyphicon,
-}
-.social-event {
-.fa,
-}
-.social-event {
-[class^=icon-']
-}
-.social-event {
-[class*='icon-']
-}
-{
-	font-weight: bold;
-	color: #999999;
-}
+/*body {*/
+	/*margin-top: 20px; background-color: #eeeeee*/
+/*}*/
+/*.social-event {*/
+/*.glyphicon,*/
+/*}*/
+/*.social-event {*/
+/*.fa,*/
+/*}*/
+/*.social-event {*/
+/*[class^=icon-']*/
+/*}*/
+/*.social-event {*/
+/*[class*='icon-']*/
+/*}*/
+/*{*/
+	/*font-weight: bold;*/
+	/*color: #999999;*/
+/*}*/
 
-.social-event a,
-.social-event a: hover,
-.social-event a:active,
-.social-event a: focus; {
-	text-decoration: none;
-}
+/*.social-event a,*/
+/*.social-event a: hover,*/
+/*.social-event a:active,*/
+/*.social-event a: focus; {*/
+	/*text-decoration: none;*/
+/*}*/
 
 /****************
 *Rate-person
 *****************/
 .rating-person {
-	background-image: url("./image/crowd.jpeg");
+	/*background-image: url("./image/crowd.jpeg");*/
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -43,7 +43,7 @@ body {
 *Rate-event
 *****************/
 .rating-event {
-	background-image: url("./image/crowd.jpeg");
+	/*background-image: url("./image/crowd.jpeg");*/
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
