--- a/public_html/templates/edit-event.html
+++ b/public_html/templates/edit-event.html
@@ -1,1 +1,53 @@
-<h1>Edit Event</h1>
+<!-- Edit Event Modal -->
+<div class="modal fade" id="editEvent" tabindex="-1" role="dialog" aria-labelledby="editEventLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="editEventLabel">Edit Event</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body social-event">
+				<form>
+					<div class="form-group">
+						<label for="event-name" class="col-form-label">Event Name:</label>
+						<input type="text" class="form-control" id="event-name">
+					</div>
+					<div class="form-group">
+						<label for="event-detail" class="col-form-label">Event Detail:</label>
+						<input type="text" class="form-control" id="event-detail">
+					</div>
+					<div class="form-group">
+						<label for="price" class="col-form-label">Event Price:</label>
+						<input type="number" class="form-control" id="price">
+					</div>
+					<div class="form-group">
+						<label for="image" class="col-form-label">Image:</label>
+						<input type="image" class="form-control" id="image">
+					</div>
+					<div class="form-group">
+						<label for="address" class="col-form-label">Address:</label>
+						<textarea type="text" class="form-control" id="address"></textarea>
+					</div>
+					<div class="form-group">
+						<label for="start-time" class="col-form-label">Start Time:</label>
+						<input type="datetime-local" class="form-control" id="start-time">
+					</div>
+					<div class="form-group">
+						<label for="end-time" class="col-form-label">End Time:</label>
+						<input type="datetime-local" class="form-control" id="end-time">
+					</div>
+					<div class="form-group">
+						<label for="attendee-limit" class="col-form-label">Event Attendee Limit:</label>
+						<input type="number" class="form-control" id="attendee-limit">
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Edit Event</button>
+			</div>
+		</div>
+	</div>
+</div>
