--- a/public_html/templates/edit-profile.html
+++ b/public_html/templates/edit-profile.html
@@ -1,1 +1,49 @@
-<h1>Edit Profile</h1>
+<!-- Modal -->
+<div class="modal fade" id="editProfile" tabindex="-1" role="dialog" aria-labelledby="editProfileLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="editProfileLabel">Edit Profile</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form>
+					<div class="form-group">
+						<label for="first-name" class="col-form-label">First Name:</label>
+						<input type="text" class="form-control" id="first-name">
+					</div>
+					<div class="form-group">
+						<label for="last-name" class="col-form-label">Last Name:</label>
+						<input type="text" class="form-control" id="last-name">
+					</div>
+					<div class="form-group">
+						<label for="email" class="col-form-label">Email:</label>
+						<input type="email" class="form-control" id="email">
+					</div>
+					<div class="form-group">
+						<label for="bio" class="col-form-label">Bio:</label>
+						<textarea type="text" class="form-control" id="bio"></textarea>
+					</div>
+					<div class="form-group">
+						<label for="profile-image" class="col-form-label">Profile Image:</label>
+						<input type="image" class="form-control" id="profile-image">
+					</div>
+					<div class="form-group">
+						<label for="password" class="col-form-label">Password:</label>
+						<input type="password" class="form-control" id="password">
+					</div>
+					<div class="form-group">
+						<label for="confirm-password" class="col-form-label">Confirm Password:</label>
+						<input type="password" class="form-control" id="confirm-password">
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save Profile</button>
+			</div>
+		</div>
+	</div>
+</div>
