--- a/public_html/templates/landing-page.html
+++ b/public_html/templates/landing-page.html
@@ -1,56 +1,17 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>CrowdVibe</title>
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-		<link rel="stylesheet" type="text/css" href="../../src/app.css">
-	</head>
-	<body>
-		<!--Nav starts -->
-		<nav class="navbar navbar-default navbar-fixed-top navbar-inverse bg-dark">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="#">CrowdVibe</a>
-				</div>
-				<div id="navbar" class="collapse navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Signup  <i class="fa fa-user-plus"></i></a></li>
-						<li><a href="#about">Login  <i class="fa fa-user"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<!-- nav ends -->
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="content">
-						<h1>CrowdVibe</h1>
-						<h3>The Spontaneous Social Media App</h3>
-						<hr>
-						<button class="btn btn-default btn-lg"><i class="fa fa-users fa-fw"></i> Join now!</button>
-					</div>
-				</div>
+<main-nav></main-nav>
+<div class="container" id="landing-page">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="content">
+				<h1>CrowdVibe</h1>
+				<h3>The Spontaneous Social Media App</h3>
+				<hr>
+				<button type="button" class="btn-default btn-secondary btn-lg" data-toggle="modal" data-target="#join">
+					<i class="fa fa-users fa-fw"></i> Start Vibing
+				</button>
+				<sign-up></sign-up>
+				<sign-in></sign-in>
 			</div>
 		</div>
-
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
-		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-
-	</body>
-</html>
+	</div>
+</div>
