--- a/public_html/templates/sign-in.html
+++ b/public_html/templates/sign-in.html
@@ -1,1 +1,29 @@
-<h1>Sign-In</h1>
+<!-- Modal -->
+<div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="loginLabel">Login</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form>
+					<div class="form-group">
+						<label for="email" class="col-form-label">Email:</label>
+						<input type="text" class="form-control" id="email">
+					</div>
+					<div class="form-group">
+						<label for="password" class="col-form-label">Password:</label>
+						<input type="text" class="form-control" id="password">
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Login</button>
+			</div>
+		</div>
+	</div>
+</div>
