--- a/src/app.css
+++ b/src/app.css
@@ -62,16 +62,14 @@ h4 {
 
 /**Landing Page CSS **/
 body {
-	background: url(https://images.unsplash.com/photo-1497911270199-1c552ee64aa4?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
+	background-image: url(https://images.unsplash.com/photo-1497911270199-1c552ee64aa4?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
 	background-size: cover;
 	background-position: center;
 }
 
-body,
-html {
+body, html {
 	width: 100%;
 	height: 100%;
-	font-family: "Lato";
 	color: white;
 }
 
@@ -80,6 +78,15 @@ h1 {
 	font-size: 5em;
 }
 
+a {
+	text-decoration: none;
+	color: white;
+}
+
+a:hover {
+	text-decoration: none;
+	color: orangered;
+}
 
 .content{
 	padding-top: 25%;
@@ -93,4 +100,15 @@ hr {
 	width: 400px;
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+/**SignUp **/
+form, #modal-title {
+	color: black;
+}
+
+/**modal**/
+
+.modal {
+	color: black;
 }
