began working on sign-in and sign-up angular process

--- a/public_html/templates/sign-up.html
+++ b/public_html/templates/sign-up.html
@@ -9,40 +9,94 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<form>
+				<form class="form-horizontal" #signUpForm="ngForm" name="signUpForm" id="signUpForm" [formGroup]="signUpForm" novalidate (ngSubmit)="createSignUp();">
+					<!-- First Name -->
 					<div class="form-group">
-						<label for="first-name" class="col-form-label">First Name:</label>
-						<input type="text" class="form-control" id="first-name">
+						<label for="profileFirstName" class="col-form-label">First Name:</label>
+						<input type="text" class="form-control" id="profileFirstName" formControlName="profileFirstName">
 					</div>
+							<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="signUpForm.controls.profileFirstName?.invalid && signUpForm.controls.profileFirstName?.touched">
+						<p *ngIf="signUpForm.controls.profileFirstName?.errors.maxlength">First Name is too long</p>
+						<p *ngIf="signUpForm.controls.profileFirstName?.errors.required">First Name is required</p>
+					</div>
+
+					<!-- Last Name -->
 					<div class="form-group">
-						<label for="last-name" class="col-form-label">Last Name:</label>
-						<input type="text" class="form-control" id="last-name">
+						<label for="profileLastName" class="col-form-label">Last Name:</label>
+						<input type="text" class="form-control" id="profileLastName" formControlName="profileLastName">
 					</div>
+								<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="signUpForm.controls.profileLastName?.invalid && signUpForm.controls.profileLastName?.touched">
+						<p *ngIf="signUpForm.controls.profileLastName?.errors.maxlength">Last Name is too long</p>
+						<p *ngIf="signUpForm.controls.profileLastName?.errors.required">Last Name is required</p>
+					</div>
+
+					<!-- Username -->
 					<div class="form-group">
-						<label for="user-name" class="col-form-label">User Name:</label>
-						<input type="text" class="form-control" id="user-name">
+						<label for="profileUsername" class="col-form-label">User Name:</label>
+						<input type="text" class="form-control" id="profileUsername" formControlName="profileUsername">
 					</div>
+							<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="signUpForm.controls.profileUsername?.invalid && signUpForm.controls.profileUsername?.touched">
+						<p *ngIf="signUpForm.controls.profileUsername?.errors.maxlength">Username is too long</p>
+						<p *ngIf="signUpForm.controls.profileUsername?.errors.required">Username is required</p>
+					</div>
+
+					<!-- Email -->
 					<div class="form-group">
-						<label for="email" class="col-form-label">Email:</label>
-						<input type="email" class="form-control" id="email">
+						<label for="profileEmail" class="col-form-label">Email:</label>
+						<input type="email" class="form-control" id="profileEmail" formControlName="profileEmail">
 					</div>
+							<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="signUpForm.controls.profileEmail?.invalid && signUpForm.controls.profileEmail?.touched">
+						<p *ngIf="signUpForm.controls.profileEmail?.errors.maxlength">Email is too long</p>
+						<p *ngIf="signUpForm.controls.profileEmail?.errors.required">Email is required</p>
+					</div>
+
+					<!-- Bio -->
 					<div class="form-group">
-						<label for="bio" class="col-form-label">Bio:</label>
-						<textarea type="text" class="form-control" id="bio"></textarea>
+						<label for="profileBio" class="col-form-label">Bio:</label>
+						<textarea type="text" class="form-control" id="profileBio" formControlName="profileBio"></textarea>
 					</div>
+							<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="signUpForm.controls.profileBio?.invalid && signUpForm.controls.profileBio?.touched">
+						<p *ngIf="signUpForm.controls.profileBio?.errors.maxlength">Bio is too long</p>
+						<p *ngIf="signUpForm.controls.profileBio?.errors.required">Bio required</p>
+					</div>
+
+					<!-- Password -->
 					<div class="form-group">
 						<label for="password" class="col-form-label">Password:</label>
-						<input type="password" class="form-control" id="password">
+						<input type="password" class="form-control" id="password" formControlName="password" >
 					</div>
+							<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="signUpForm.controls.password?.invalid && signUpForm.controls.password?.touched">
+						<p *ngIf="signUpForm.controls.password?.errors.maxlength">Password is too long</p>
+						<p *ngIf="signUpForm.controls.password?.errors.required">Password required</p>
+					</div>
+
+					<!-- Confirm Password -->
 					<div class="form-group">
 						<label for="confirm-password" class="col-form-label">Confirm Password:</label>
 						<input type="password" class="form-control" id="confirm-password">
+					</div>
+							<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="signUpForm.controls.passwordConfirm?.invalid && signUpForm.controls.passwordConfirm?.touched">
+						<p *ngIf="signUpForm.controls.passwordConfirm?.errors.maxlength">Password is too long</p>
+						<p *ngIf="signUpForm.controls.passwordConfirm?.errors.required">Password required</p>
+						<!--<p *ngIf="signUpForm.controls.password !== signUpForm.controls.confirmPassword">Passwords do not match</p>-->
 					</div>
 				</form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Sign-Up</button>
+				<button type="submit" id="submit" name="signUp" class="btn btn-info">Sign Up</button>
+			</div>
+			<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
+				<button type="button" class="close" aria-label="Close" (click)="status = null;"><span
+					aria-hidden="true">&times;</span></button>
+				{{ status.message }}
 			</div>
 		</div>
 	</div>
