--- a/public_html/templates/edit-event.html
+++ b/public_html/templates/edit-event.html
@@ -20,7 +20,7 @@
 					</div>
 					<div class="form-group">
 						<label for="price" class="col-form-label">Event Price:</label>
-						<input type="number" class="form-control" id="price">
+						<input type="number" min="0" max="10,000" step="0.01" class="form-control" id="price">
 					</div>
 					<div class="form-group">
 						<label for="image" class="col-form-label">Image:</label>
