--- a/public_html/templates/sign-in.html
+++ b/public_html/templates/sign-in.html
@@ -9,20 +9,25 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<form>
+				<form #signInForm="ngForm" class="form-horizontal" name="signInForm" id="signinForm" novalidate
+						(ngSubmit)="signIn();">
 					<div class="form-group">
-						<label for="email" class="col-form-label">Email:</label>
-						<input type="text" class="form-control" id="email">
+						<label for="signin-email" class="col-form-label">Email:</label>
+						<input type="email" name="signin-email" id="signin-email" required [(ngModel)]=signin.profileEmail #profileEmail="ngModel" class="form-control input-sm">
 					</div>
 					<div class="form-group">
-						<label for="password" class="col-form-label">Password:</label>
-						<input type="text" class="form-control" id="password">
+						<label for="signin-password" class="col-form-label">Password:</label>
+						<input type="password" id="signin-password" name="signin-password" required [(ngModel)]="signin.profilePassword" #profilePassword="ngModel" class="form-control input-sm">
 					</div>
 				</form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Login</button>
+				<button type="submit" id="submit" [disabled]="signInForm.invalid" class="btn btn-info">Login</button>
+			</div>
+			<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
+				<button type="button" class="close" aria-label="Close" (click)="status = null;"><span aria-hidden="true">&times;</span></button>
+				{{ status.message }}
 			</div>
 		</div>
 	</div>
