--- a/public_html/templates/attending-confirmation.html
+++ b/public_html/templates/attending-confirmation.html
@@ -1,5 +1,6 @@
 <!-- Modal -->
-<div class="modal fade" id="attendingConfirmation" tabindex="-1" role="dialog" aria-labelledby="attendingConfirmationLabel" aria-hidden="true">
+<div class="modal fade" id="attendingConfirmation" tabindex="-1" role="dialog"
+	  aria-labelledby="attendingConfirmationLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -10,9 +11,12 @@
 			</div>
 			<div class="modal-body">
 				<p>Please confirm you are planning on attending (event name goes here)</p>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">No Way</button>
-				<button type="button" class="btn btn-primary popover-test" title="Attendance Confirmed" data-content="You are now attending (event name goes here).">Confirm</button>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">No Way</button>
+					<button type="button" class="btn btn-primary popover-test" title="Attendance Confirmed"
+							  data-content="You are now attending (event name goes here).">Confirm
+					</button>
+				</div>
 			</div>
 		</div>
 	</div>
