--- a/public_html/templates/create-event.html
+++ b/public_html/templates/create-event.html
@@ -46,7 +46,7 @@
 						<!-- Event Image -->
 						<div class="form-group">
 							<label for="eventImage" class="col-form-label">Event Image:</label>
-							<input type="image" class="form-control" id="eventImage" formControlName="eventImage">
+							<input type="text" class="form-control" id="eventImage" formControlName="eventImage">
 						</div>
 						<!-- Angular Validation -->
 						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventImage?.invalid && createEventForm.controls.eventImage?.touched">
@@ -57,7 +57,7 @@
 						<!-- Event Address -->
 						<div class="form-group">
 							<label for="eventAddress" class="col-form-label">Address:</label>
-							<textarea type="text" class="form-control" id="eventAddress" formControlName="eventAddress"></textarea>
+							<input type="text" class="form-control" id="eventAddress" formControlName="eventAddress">
 						</div>
 						<!-- Angular Validation -->
 						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventAddress?.invalid && createEventForm.controls.eventAddress?.touched">
